tests/error/type_errors/and_not_bool_left.py
from tests.error.util import guppy


@guppy
def foo(x: bool) -> bool:
    return "xx" and x
